added changes from QCRI

--- a/index.html
+++ b/index.html
@@ -60,10 +60,40 @@
 
 <p>Each HIT contains a question from a Qatar social forum composed of two fields: "short" and "full". Typically, "short" is a short version of "full", but sometimes they contain complementary information.  Your job is to read each question and judge the question to the best of your ability.  You can select from the following choices as to the nature of the question:</p>
 <ul>
-    <li><b>Good General Question</b> (e.g., is a question other people might find useful to know the answer to, and the answer is open-ended)</li>
-	<li><b>Good Yes-No Question</b> (e.g.,  is a question other people might find useful to know the answer to, and the answer is either yes or no)</li>
-	<li><b>Bad Question</b> (e.g., the post isn't really a question or is a question no one else would find useful to know the answer to)</li>
+	<li><b>Bad Question</b> (e.g., the post fits into one of the 'bad' categories)</li>
+    <ul>
+        <li><b>Not a Question e.g.</b></li>
+        <ul>
+            <li>Wish/Hope</li>
+            <li>Opinion</li>
+            <li>Status</li>
+            <li>Emotion</li>
+            <li>Advertisement</li>
+            <li>Complaint</li>
+        </ul>
+        <li><b>Not a Serious Question i.e.</b></li>
+        <ul>
+            <li>No real information needed</li>
+        </ul>
+        <li><b>Unfocused and/or Vague e.g.</b></li>
+        <ul>
+            <li>Politics</li>
+        </ul>
+        <li><b>Potentially Embarrassing or Inappropriate Topic e.g.</b></li>
+        <ul>
+            <li>Worker Abuse</li>
+            <li>Illegitimate Business</li>
+            <li>Cheating</li>
+            <li>Kafala System</li>
+            <li>Mentions a Particular Salary</li>
+            <li>Slander</li>
+        </ul>
+    </ul>
+    <li><b>Good General Question</b> (e.g., is not a bad question and the answer is open-ended)</li>
+    <li><b>Good Yes-No Question</b> (e.g.,  is not a bad question and the answer is either yes or no)</li>
 </ul>
+
+<p>If you are unsure, please select "Bad"</p>
           
 <p>Please study the examples before working on the HIT. Your work will be reviewed by humans, so please do not try to cheat.</p>
 <p>Click on the "show examples" button to see some examples.</p>
